--- a/health-agent-by-kempy/agent/.env
+++ b/health-agent-by-kempy/agent/.env
@@ -1,4 +1,4 @@
 # Agent .env example
 SERVER_URL=https://health.kempysnetwork.org
-DEVICE_KEY=oaNwau2ULw_HHbPhgdtWV_2XeufwAD56phtAFLeHDnY
+DEVICE_KEY=
 DEVICE_NAME=My Gaming Rig
